# Celeris

./: CMakeLists.txt
include/core/: itemNode.h  requestNode.h  taskNode.h
include/util/decisions/: ifDecTree.h
src/: Web Serve.cpp  main.cpp
src/ast/: ast_manager.cpp
src/core/: ServerNode.cpp  itemNode.cpp  itemNode.h  requestNode.cpp  storeNode.cpp  storeNode.h  taskNode.cpp  taskNode.h
src/util/: fileParser.cpp
